# Deal_IQ

./: .gitignore  data_cleaning.ipynb  makefile  pyproject.toml  readme.md
.github/workflows/: data_cleanig.yml
DataCleaning/: data_census_region.py  data_cleaning.ipynb  data_cleaning.py  data_cleaning_main.py  data_drive.py  data_fuel.py  data_lat_long.py  data_manufacturers.py  data_model.py  data_odometer.py  data_paint_color.py  data_price.py  data_state.py  data_title_status.py  data_transmission.py  data_type.py  data_year.py  drive_cleaning.py  model_cleaning.py  model_extract.py  test_cleaning.py
FeatureEngineering/: df_version_2_label_encoding_metadata.json  feature_engineering.ipynb
cloud/: gcs_storage_operations.py
data/: manufacturers_list.csv  models.py  models_with_drive.csv
scripts/: ci_test.py  test_auth.py
utility/: print_summary.py
